added lec 9 questions

--- a/CS 188 - Artificial Intelligence/review material/review questions.tex
+++ b/CS 188 - Artificial Intelligence/review material/review questions.tex
@@ -51,6 +51,40 @@
 \end{enumerate}
 
 \section*{Lecture 9 - Markov Decision Processes II}
+\begin{enumerate}[resume*]
+\item What is policy evaluation?
+\item What is a fixed policy?
+\item Explain two ways to find the values for a fixed policy.
+\item How does this compare to value iteration?
+\item What is the complexity of the iterative approach to policy evaluation?
+\item For the non-iterative approach, what kind of matrix is usually involved? (Hint: usually enables a computer to find the solution quickly) \\
+
+\item Given the optimal value for each state, can we determine the optimal policy without any calculations?
+\item Explain how to determine the optimal policy given optimal value for each state.
+\item Explain how to determine the optimal policy given the Q-values for each state. \\
+
+\item State three problems with value iteration.
+\item How does the rate of changes of "max" actions differ for early, middle, and late stages of value iteration?
+
+\item What are the two main steps of policy iteration? Explain each.
+\item Does policy iteration converge to the optimal policy? Does it converge to the optimal values? Explain why.
+\item Why use policy iteration instead of value iteration? For what type of MDP is policy iteration especially preferred over value iteration?
+\item Does policy iteration result in a better solution than value iteration?
+\item Explain how to find the optimal policy using value iteration.
+\item Explain how to find the optimal values using policy iteration.
+\item When does policy iteration terminate? How does $\gamma \in (0,1)$ affect this?
+
+\item What is a multi-armed bandit?
+\item What kind of rewards do choices in the multi-armed bandit problem usually have? How does this affect the corresponding MDP?
+\item Explain how to find the optimal policy of a multi-armed bandit MDP given all of the details of the MDP. What is this called? State why this is advantageous to having only partial information of the MDP.
+\item Explain how to find the optimal policy of a multi-armed bandit MDP given only partial details of the MDP. What is this called?
+
+
+
+
+\end{enumerate}
+
+
 
 
 
